target/rls/wasm32-wasi/debug/build/anyhow-35a8674c3c27dbda/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/andrewbetts/repos/fastly-template-rust-default/target/rls/wasm32-wasi/debug/build/anyhow-35a8674c3c27dbda/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
